0.4 (??)

  * Fixed (more) problems building debian packages.
  * Modified package description for fedora and debian.
  * Converted remaining files in latin1 to utf-8.
  * Fixed capitalization problems in translatable strings (Philip Withnall).
  * Added en_GB translation (Philip Withnall).
  * Use Unicode ellipsis instead of three dots (Philip Withnall).
  * Added 'Translated by' tab to about dialog.
  * Fixed slow startup (no longer wait for albums to be loaded).
  * Automatically re-show the authorization dialog if needed.
  * Automatically show an informative dialog when everybody went fine.
  * More descriptive strings in picture details dialog.
  * Implemented new settings dialog, allowing to pre-set default
    values for the visibility of the pictures, and to choose whether
    to open the browser or not after a successful upload process.
  * Added support for specifying an HTTP proxy.
  * Added basic man page (Alberto Garcia).
  * Fixed memory leaks thanks to valgrind.
  * Report in the progress dialog when pictures are being added to
    sets, and make that operation itself cancellable too.
  * Allow changing sorting order in 'add to album' dialog.
  * Better and safer implementation for cancelling operations.
  * Allow adding pictures to group pools.
  * Be aware of changes in basic account info on startup.
  * Added support for handling multiple accounts.
  * Added support for creating new albums right from frogr.
  * Retrieve list of tags and use it in entry completions.

0.3 (22 Dec 2010)

  * Fixed problems building debian packages.
  * Committed patches related to GNOME 3.0 integration (Javier Jardón).
  * Got rid of libcurl and improved integration with the mainloop by
    replacing the flickcurl library with our asynchronous (implements
    the GAsync API) library based in libsoup: flicksoup.
  * Improved authentication process. Made it more seamless and less
    error prone. Also, added a menu item to re-authorize if needed.