@@ -1,6 +1,9 @@
 Alejandro Piñeiro Iglesias <apinheiro@igalia.com>
 Mario Sanchez Prada <msanchez@igalia.com>
-* Spanish translation (es_ES)
+* Spanish translation (es)
 
 Philip Withnall <philip@tecnocode.co.uk>
 * British English translation (en_GB)
+
+Alexandre Franke <alexandre.franke@gmail.com>
+* French translation (fr)
