@@ -1,2 +1,3 @@
 en_GB
 es
+fr
