@@ -4,7 +4,7 @@
   * Modified package description for fedora and debian.
   * Converted remaining files in latin1 to utf-8.
   * Fixed capitalization problems in translatable strings (Philip Withnall).
-  * Added en_GB translation (Philip Withnall).
+  * Added British English (en_GB) translation (Philip Withnall).
   * Use Unicode ellipsis instead of three dots (Philip Withnall).
   * Added 'Translated by' tab to about dialog.
   * Fixed slow startup (no longer wait for albums to be loaded).
@@ -26,6 +26,7 @@
   * Added support for handling multiple accounts.
   * Added support for creating new albums right from frogr.
   * Retrieve list of tags and use it in entry completions.
+  * Added French (fr) translation (Alexandre Franke).
 
 0.3 (22 Dec 2010)
 
